--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -6,6 +6,6 @@ header {
 }
 
 .logo {
-    background: url('../images/logo.png') no-repeat;
+    background: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png') no-repeat;
     height: 100%;
 }
